--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20230419.0",
 		"@types/bcryptjs": "^2.4.6",
+		"@types/node": "^20.9.2",
 		"bcryptjs": "^2.4.3",
 		"typescript": "^5.0.4",
 		"wrangler": "^3.0.0"
